--- a/BreakernoidsGL.csproj
+++ b/BreakernoidsGL.csproj
@@ -54,6 +54,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Paddle.cs" />
+    <Compile Include="Ball.cs" />
+    <Compile Include="Block.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
