--- a/BreakernoidsGL.csproj
+++ b/BreakernoidsGL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Paddle.cs" />
     <Compile Include="Ball.cs" />
     <Compile Include="Block.cs" />
+    <Compile Include="PowerUp.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
